第二次整合

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</form>
 				</div>
 				<div class="show-menu-control">
-					<a id="show-menu" class="show-menu" href="#">
+					<a id="show-menu" class="show-menu" href="javascript:void(0)">
 						<div class="my-btn my-btn-primary">
 							<div class="my-btn-bg-top"></div>
 							<div class="my-btn-bg-bottom"></div>
@@ -112,7 +112,7 @@
 		</div>
 	</div>
 	<div id="main-slider-2" class="main-slider main-slider-2">
-		<a class="main-slider-2-button-prev" href="#">
+		<a class="main-slider-2-button-prev" href="javascript:void(0)">
 			<div class="my-btn my-btn-grey">
 				<div class="my-btn-bg-top"></div>
 				<div class="my-btn-bg-bottom"></div>
@@ -122,7 +122,7 @@
 			</div>
 		</a>
 
-		<a class="main-slider-2-button-next" href="#">
+		<a class="main-slider-2-button-next" href="javascript:void(0)">
 			<div class="my-btn my-btn-grey">
 				<div class="my-btn-bg-top"></div>
 				<div class="my-btn-bg-bottom"></div>
@@ -267,20 +267,6 @@
 						eros.
 						Proin magna. Duis vel nibh at velit scelerisque suscipit.（内容简介）
 					</p>
-					<div class="home-about-video">
-						<a href="06_about.html">
-							<div class="home-about-button">
-								<div class="my-btn my-btn-primary">
-									<div class="my-btn-bg-top"></div>
-									<div class="my-btn-bg-bottom"></div>
-									<div class="my-btn-text">
-										详情
-									</div>
-								</div>
-							</div>
-						</a>
-
-					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 get-quote">
 					<div class="title-group">
@@ -469,24 +455,24 @@
 						<div class="home-clients-carousel owl-carousel owl-theme" id="owl-clients">
 							<div class="home-clients-carousel-block">
 								<div class="home-clients-carousel-item">
-									<a href="#">
+									<a href="javascript:void(0)">
 										<img src="img/wishloog.png" alt="" />
 									</a>
 								</div>
 								<div class="home-clients-carousel-item ">
-									<a href="#"><img src="img/tianmaoloog.jpg" alt="" /></a>
+									<a href="javascript:void(0)"><img src="img/tianmaoloog.jpg" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="img/zhifubaoloog.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="img/zhifubaoloog.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="img/Eloog.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="img/Eloog.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="img/youzhengloog.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="img/youzhengloog.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="img/yamaxunloog.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="img/yamaxunloog.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-hline"></div>
 								<div class="home-clients-carousel-vline1"></div>
@@ -494,22 +480,22 @@
 							</div>
 							<div class="home-clients-carousel-block">
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client1.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client1.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item ">
-									<a href="#"><img src="media/clients/client2.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client2.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client3.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client3.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client4.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client4.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client5.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client5.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client6.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client6.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-hline"></div>
 								<div class="home-clients-carousel-vline1"></div>
@@ -517,24 +503,24 @@
 							</div>
 							<div class="home-clients-carousel-block">
 								<div class="home-clients-carousel-item">
-									<a href="#">
+									<a href="javascript:void(0)">
 										<img src="media/clients/client1.png" alt="" />
 									</a>
 								</div>
 								<div class="home-clients-carousel-item ">
-									<a href="#"><img src="media/clients/client2.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client2.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client3.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client3.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client4.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client4.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client5.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client5.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-item">
-									<a href="#"><img src="media/clients/client6.png" alt="" /></a>
+									<a href="javascript:void(0)"><img src="media/clients/client6.png" alt="" /></a>
 								</div>
 								<div class="home-clients-carousel-hline"></div>
 								<div class="home-clients-carousel-vline1"></div>
@@ -569,12 +555,12 @@
 					<div class="footer-2-links">
 						<div class="footer-2-links-1">
 							<ul>
-								<li><a href="">首页</a></li>
-								<li><a href="">关于我们</a></li>
-								<li><a href="">服务应用</a></li>
-								<li><a href="">新闻资讯</a></li>
-								<li><a href="">技术支持</a></li>
-								<li><a href="">帮助我们</a></li>
+								<li><a href="index.html">首页</a></li>
+								<li><a href="services.html">关于我们</a></li>
+								<li><a href="about.html">服务应用</a></li>
+								<li><a href="news.html">新闻资讯</a></li>
+								<li><a href="technology.html">技术支持</a></li>
+								<li><a href="help.html">帮助我们</a></li>
 							</ul>
 						</div>
 					</div>
@@ -623,91 +609,17 @@
 			</div>
 		</div>
 	</div>
-	<aside id="slide-menu" class="slide-menu">
-		<div class="close-menu" id="close-menu">
-			<i class="fa fa-close"></i>
-		</div>
-		<ul id="left-menu" class="left-menu">
-			<li>
-				<a href="#">Home <i class="fa fa-plus arrow"></i></a>
-				<ul class="slide-menu-child">
-					<li><a href="01_home.html">Home 1</a></li>
-					<li><a href="02_home.html">Home 2</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="#">Service <i class="fa fa-plus arrow"></i></a>
-				<ul class="slide-menu-child">
-					<li><a href="03_services.html">Service 1</a></li>
-					<li><a href="04_services.html">Service 2</a></li>
-					<li><a href="05_service_detail.html">Service Details</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="06_about.html">About us</a>
-			</li>
-			<li>
-				<a href="#">Elements <i class="fa fa-plus arrow"></i></a>
-				<ul class="slide-menu-child">
-					<li><a href="07_typography.html">Typography</a></li>
-					<li><a href="08_buttons.html">Buttons</a></li>
-					<li><a href="09_progress.html">Progress Bars</a></li>
-					<li><a href="10_alerts.html">Alerts</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="#">Blog <i class="fa fa-plus arrow"></i></a>
-				<ul class="slide-menu-child">
-					<li><a href="11_blog.html">Blog items</a></li>
-					<li><a href="12_blog_detail.html">Single Post</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="13_contacts.html">Contacts</a>
-			</li>
-
-		</ul>
-
-	</aside>
-	<div class="black-overlay" id="black-overlay"></div>
-	<div class="colors">
-		<div class="colors-item">
-			<div class="colors-item-sq sq-blue"></div>
-		</div>
-		<div class="colors-item">
-			<div class="colors-item-sq sq-red"></div>
-		</div>
-		<div class="colors-item">
-			<div class="colors-item-sq sq-green"></div>
-		</div>
-	</div>
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-
-	<!-- SMOOTH SCROLLING  -->
 	<script src="js/smoothscroll.min.js"></script>
-
-	<!-- STELLAR.JS FOR PARALLAX -->
 	<script src="js/jquery.stellar.min.js"></script>
-
-	<!-- SLIDER PRO  -->
 	<script src="assets/slider-pro/js/jquery.sliderPro.min.js"></script>
-
-	<!-- SCROLLSPY -->
 	<script src="js/scrollspy.min.js"></script>
-
-	<!-- WOW PLAGIN -->
 	<script src="js/wow.min.js"></script>
-
-	<!-- CAROUSEL -->
 	<script src="assets/owl-carousel/owl.carousel.min.js"></script>
-
-	<!-- VERTICAL ACCORDEON MENU -->
 	<script src="js/metisMenu.min.js"></script>
-
-	<!-- CUSTOM SCRIPT -->
 	<script src="js/theme.min.js"></script>
-
 	<script src="assets/colors/js/colors.js"></script>
 </body>
+
 </html>
